--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -3,14 +3,14 @@ name: Hourly Build
 on:
   schedule:
     - cron: "0 * * * *"  # every hour
-  workflow_dispatch:     # allow manual runs
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # allows pushing changes
+      contents: write
 
     steps:
       - name: Set up job
@@ -27,15 +27,10 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install requests espn-api==0.38.1  # latest compatible
-          pip install beautifulsoup4
+          pip install requests espn-api==0.38.1 beautifulsoup4
 
-      - name: Fetch ESPN (public)
-        run: python pipeline/fetch_espn_public.py
-
-      # If you want to run the SDK version instead, uncomment this:
-      # - name: Fetch ESPN via SDK
-      #   run: python pipeline/fetch_espn_via_sdk.py
+      - name: Fetch ALL ESPN data
+        run: python pipeline/run_all.py
 
       - name: Commit & push JSON
         run: |
