--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -1,43 +1,35 @@
-name: Hourly Build
+name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "0 * * * *"  # every hour
+    - cron: "0 * * * *" # Every hour
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
-
     steps:
-      - name: Set up job
-        run: echo "Starting hourly build..."
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
 
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests espn-api==0.38.1 beautifulsoup4
+    - name: Fetch all ESPN data
+      run: python pipeline/fetch_espn_all.py
 
-      - name: Fetch ALL ESPN data
-        run: python pipeline/run_all.py
-
-      - name: Commit & push JSON
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add docs/data/*.json
-          git commit -m "Update ESPN JSON data" || echo "No changes to commit"
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Commit and push changes
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add data/*.json
+        git commit -m "Update ESPN data [skip ci]" || echo "No changes to commit"
+        git push
