--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,7 +2,7 @@ name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "0 * * * *" # every hour
+    - cron: "0 * * * *" # every hour (UTC)
   workflow_dispatch:
 
 permissions:
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -23,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests>=2.31,<3
+          pip install "requests>=2.31,<3"
 
       - name: Ensure docs/data exists
         run: |
@@ -32,7 +33,7 @@ jobs:
 
       - name: Fetch ALL ESPN data (single-file, no imports)
         env:
-          LEAGUE_ID: "508419792"              # or set as a repo secret and reference ${{ secrets.LEAGUE_ID }}
+          LEAGUE_ID: "508419792"              # or use ${{ secrets.LEAGUE_ID }}
           SEASON: "2025"
           ESPN_SWID: ${{ secrets.ESPN_SWID }} # optional
           ESPN_S2:   ${{ secrets.ESPN_S2 }}   # optional
