--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -29,14 +29,14 @@ jobs:
       - name: Ensure docs/data exists
         run: |
           mkdir -p docs/data
-          touch docs/data/.gitkeep
+          echo '{}' > docs/data/status.json
 
-      - name: Fetch ALL ESPN data (single-file, writes to docs/data)
+      - name: Fetch ALL ESPN data (writes to docs/data/)
         env:
-          LEAGUE_ID: "508419792"              # or use ${{ secrets.LEAGUE_ID }}
+          LEAGUE_ID: "508419792"
           SEASON: "2025"
-          ESPN_SWID: ${{ secrets.ESPN_SWID }} # optional for private leagues
-          ESPN_S2:   ${{ secrets.ESPN_S2 }}   # optional for private leagues
+          ESPN_SWID: ${{ secrets.ESPN_SWID }}  # optional for private leagues
+          ESPN_S2:   ${{ secrets.ESPN_S2 }}    # optional for private leagues
         run: |
           python pipeline/fetch_espn_all.py
 
