--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,7 +2,7 @@ name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "0 * * * *"   # every hour (UTC)
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 permissions:
@@ -31,19 +31,27 @@ jobs:
           mkdir -p docs/data
           echo '{}' > docs/data/status.json
 
-      - name: Fetch ALL ESPN data (writes to docs/data/)
+      - name: Fetch ESPN league core (standings/rosters/etc)
         env:
           LEAGUE_ID: "508419792"
           SEASON: "2025"
-          ESPN_SWID: ${{ secrets.ESPN_SWID }}  # optional for private leagues
-          ESPN_S2:   ${{ secrets.ESPN_S2 }}    # optional for private leagues
+          ESPN_SWID: ${{ secrets.ESPN_SWID }}
+          ESPN_S2:   ${{ secrets.ESPN_S2 }}
         run: |
           python pipeline/fetch_espn_all.py
+
+      - name: Fetch ESPN players (public catalog + projections)
+        env:
+          SEASON: "2025"
+          ESPN_SWID: ${{ secrets.ESPN_SWID }}
+          ESPN_S2:   ${{ secrets.ESPN_S2 }}
+        run: |
+          python pipeline/fetch_players.py
 
       - name: Commit & push JSON
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/data
-          git commit -m "robot: espn refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "no changes"
+          git commit -m "robot: refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "no changes"
           git push
