--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,21 +2,27 @@ name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "7 * * * *"    # hourly at minute 7
-  workflow_dispatch:
+    - cron: "7 * * * *"   # every hour at :07 UTC
+  workflow_dispatch: {}
 
 permissions:
   contents: write
 
 jobs:
   build:
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: [self-hosted]   # or [self-hosted, fm25] if you added that label
+    env:
+      LEAGUE_ID: "508419792"
+      SEASON: "2025"
+      # Map your existing secrets to the names the script accepts
+      SWID: ${{ secrets.ESPN_SWID }}
+      ESPN_S2: ${{ secrets.ESPN_S2 }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.11
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -24,25 +30,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install "requests>=2.31,<3"
 
-      - name: Fetch all ESPN data
-        env:
-          ESPN_S2: ${{ secrets.ESPN_S2 }}
-          SWID: ${{ secrets.SWID }}
-          LEAGUE_ID: "508419792"
-          SEASON: "2025"
+      - name: Fetch ESPN league JSON
         run: |
           python pipeline/fetch_espn_all.py
 
-      - name: Commit and push changes
+      - name: Commit & push JSON
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "actions@github.com"
-          git add docs/data/*.json
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-          else
-            git commit -m "robot: espn refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            git push
-          fi
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions@users.noreply.github.com"
+          git add docs/data || true
+          git commit -m "robot: refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "no changes"
+          git push
