--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -1,26 +1,29 @@
 name: Hourly Build and Deploy
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: "7 * * * *"   # every hour at :07 UTC
-  workflow_dispatch: {}
+    - cron: "0 * * * *"
 
 permissions:
   contents: write
+  actions: read
 
 jobs:
   build:
-    runs-on: [self-hosted]   # or [self-hosted, fm25] if you added that label
+    runs-on: self-hosted
     env:
       LEAGUE_ID: "508419792"
       SEASON: "2025"
-      # Map your existing secrets to the names the script accepts
-      SWID: ${{ secrets.ESPN_SWID }}
+      SWID: ${{ secrets.SWID }}
       ESPN_S2: ${{ secrets.ESPN_S2 }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,16 +33,38 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "requests>=2.31,<3"
+          pip install -r requirements.txt
 
-      - name: Fetch ESPN league JSON
+      # Pull all ESPN endpoints (team/roster/standings/matchup/settings)
+      - name: Fetch ESPN (authenticated)
         run: |
-          python pipeline/fetch_espn_all.py
+          python pipeline/fetch_espn_all.py \
+            --league $LEAGUE_ID \
+            --season $SEASON \
+            --out docs/data
 
-      - name: Commit & push JSON
+      # Build team_rosters.json from mTeam + mRoster
+      - name: Build team_rosters.json
+        run: |
+          python pipeline/build_team_rosters.py
+
+      # Fetch players and build players_summary.json
+      - name: Fetch players summary
+        run: |
+          python pipeline/fetch_players.py
+
+      - name: Commit and push JSON
+        shell: bash
         run: |
           git config user.name  "github-actions[bot]"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add docs/data || true
-          git commit -m "robot: refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "no changes"
-          git push
+          git config user.email "actions@github.com"
+
+          git add docs/data/*.json || true
+
+          if git diff --cached --quiet; then
+            echo "No JSON changes to commit."
+            exit 0
+          fi
+
+          git commit -m "robot: refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+          git push origin HEAD:main
