--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -3,7 +3,7 @@ name: Hourly Build and Deploy
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 * * * *"   # hourly at :00 UTC
 
 permissions:
   contents: write
@@ -12,11 +12,11 @@ permissions:
 jobs:
   build:
     runs-on: self-hosted
+
     env:
       LEAGUE_ID: "508419792"
       SEASON: "2025"
-      SWID: ${{ secrets.SWID }}
-      ESPN_S2: ${{ secrets.ESPN_S2 }}
+      # DO NOT put SWID/ESPN_S2 here; we resolve them below from either secrets or runner env.
 
     steps:
       - name: Checkout repository
@@ -25,13 +25,43 @@ jobs:
           fetch-depth: 0
           persist-credentials: true
 
-      - name: Preflight – verify secrets
+      # Resolve credentials from either repo secrets OR runner env (/etc/environment or service drop-in).
+      # Result: later steps will have SWID and ESPN_S2 available via $GITHUB_ENV.
+      - name: Resolve ESPN credentials (secrets or runner env)
         shell: bash
         run: |
+          FOUND=0
+
+          # Prefer repo secrets if set
+          if [ -n "${{ secrets.SWID }}" ]; then
+            echo "SWID=${{ secrets.SWID }}" >> "$GITHUB_ENV"
+            FOUND=1
+          fi
+          if [ -n "${{ secrets.ESPN_S2 }}" ]; then
+            echo "ESPN_S2=${{ secrets.ESPN_S2 }}" >> "$GITHUB_ENV"
+            FOUND=$(( FOUND + 1 ))
+          fi
+
+          # Fallback to runner env if secrets missing
+          if [ $FOUND -lt 2 ]; then
+            if [ -n "${SWID}" ] && ! grep -q '^SWID=' "$GITHUB_ENV" 2>/dev/null; then
+              echo "SWID=${SWID}" >> "$GITHUB_ENV"
+              FOUND=$(( FOUND + 1 ))
+            fi
+            if [ -n "${ESPN_S2}" ] && ! grep -q '^ESPN_S2=' "$GITHUB_ENV" 2>/dev/null; then
+              echo "ESPN_S2=${ESPN_S2}" >> "$GITHUB_ENV"
+              FOUND=$(( FOUND + 1 ))
+            fi
+          fi
+
+          # Validate presence now that we've exported
+          # (We intentionally don't echo values for security)
+          source "$GITHUB_ENV"
           MISSING=0
-          [ -z "${SWID}" ] && echo "::error::SWID secret is not set" && MISSING=1
-          [ -z "${ESPN_S2}" ] && echo "::error::ESPN_S2 secret is not set" && MISSING=1
-          [ "$MISSING" -ne 0 ] && exit 1 || echo "Secrets OK"
+          [ -z "$SWID" ] && echo "::error::SWID is not set (neither repo secret nor runner env provided it)" && MISSING=1
+          [ -z "$ESPN_S2" ] && echo "::error::ESPN_S2 is not set (neither repo secret nor runner env provided it)" && MISSING=1
+          [ "$MISSING" -ne 0 ] && exit 1
+          echo "Credentials resolved."
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -44,6 +74,11 @@ jobs:
           pip install -r requirements.txt
 
       - name: Fetch ESPN (authenticated)
+        env:
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
+          LEAGUE_ID: ${{ env.LEAGUE_ID }}
+          SEASON: ${{ env.SEASON }}
         run: |
           python pipeline/fetch_espn_all.py \
             --league "$LEAGUE_ID" \
@@ -54,6 +89,10 @@ jobs:
         run: python pipeline/build_team_rosters.py
 
       - name: Fetch players summary
+        env:
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
+          SEASON: ${{ env.SEASON }}
         run: python pipeline/fetch_players.py
 
       - name: Commit and push JSON
