--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-# requirements.txt
-requests==2.32.3
-cloudscraper==1.2.71
+requests>=2.32.3
+pytz>=2024.1
+python-dateutil>=2.9.0.post0
+cloudscraper>=1.2.71
+playwright>=1.45.0
