--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,12 +2,17 @@ name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "5 * * * *"   # every hour :05
+    - cron: "8 * * * *"   # at minute 8 each hour
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: self-hosted   # your VPS runner
+    runs-on: self-hosted  # <-- your IONOS runner label
+    env:
+      PYTHONUNBUFFERED: "1"
+      LEAGUE_ID: "508419792"
+      SEASON: "2025"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -17,37 +22,65 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install requests
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
 
-      - name: Verify secrets available
-        env:
-          SWID: ${{ secrets.SWID }}
-          ESPN_S2: ${{ secrets.ESPN_S2 }}
+      - name: Install Python deps
         run: |
-          MISSING=0
-          if [ -z "${SWID}" ]; then echo "Error: SWID secret is not set"; MISSING=1; fi
-          if [ -z "${ESPN_S2}" ]; then echo "Error: ESPN_S2 secret is not set"; MISSING=1; fi
-          if [ "$MISSING" -eq 1 ]; then exit 1; fi
+          pip install -r requirements.txt
 
-      - name: Fetch Teams & Rosters (writes docs/data/*.json)
+      - name: Install Playwright browsers
+        run: |
+          python -m playwright install --with-deps chromium
+
+      # ---- PLAYWRIGHT LOGIN TO GET COOKIES ----
+      - name: Get ESPN cookies via Playwright
         env:
-          SWID: ${{ secrets.SWID }}
-          ESPN_S2: ${{ secrets.ESPN_S2 }}
-          LEAGUE_ID: "508419792"
-          SEASON: "2025"
+          ESPN_USER: ${{ secrets.ESPN_USER }}
+          ESPN_PASS: ${{ secrets.ESPN_PASS }}
+          GITHUB_ENV: ${{ env.GITHUB_ENV }}
+        run: |
+          python pipeline/get_espn_cookies.py --league "${{ env.LEAGUE_ID }}" --write-github-env "$GITHUB_ENV"
+          echo "Got cookies. SWID and ESPN_S2 are now in GITHUB_ENV for later steps."
+
+      # ---- FETCH LEAGUE/TEAMS ----
+      - name: Fetch League (teams, meta)
+        env:
+          LEAGUE_ID: ${{ env.LEAGUE_ID }}
+          SEASON: ${{ env.SEASON }}
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
+        run: |
+          python pipeline/fetch_league.py
+
+      # ---- FETCH ROSTERS (uses cloudscraper fallback + cookies) ----
+      - name: Fetch Rosters
+        env:
+          LEAGUE_ID: ${{ env.LEAGUE_ID }}
+          SEASON: ${{ env.SEASON }}
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
         run: |
           python pipeline/fetch_rosters.py
 
-      - name: Commit and push JSON
+      # ---- FETCH PLAYERS (public endpoint + cookies if needed) ----
+      - name: Fetch Players
+        env:
+          LEAGUE_ID: ${{ env.LEAGUE_ID }}
+          SEASON: ${{ env.SEASON }}
+          SWID: ${{ env.SWID }}
+          ESPN_S2: ${{ env.ESPN_S2 }}
+        run: |
+          python pipeline/fetch_players.py
+
+      # ---- Commit data outputs ----
+      - name: Commit and push data
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "github-actions[bot]"
-          git add docs/data/team_rosters.json docs/data/players_summary.json docs/data/status.json || true
-          if git diff --cached --quiet; then
-            echo "No JSON changes to commit."
+          git add docs/data/*.json || true
+          if git diff --staged --quiet; then
+            echo "No changes to commit."
           else
             git commit -m "robot: refresh $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
             git push
