--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,19 +2,21 @@ name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "8 * * * *"   # at minute 8 each hour
+    - cron: "8 * * * *"   # minute 8 every hour
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: self-hosted  # <-- your IONOS runner label
+    runs-on: self-hosted  # your VPS runner
     env:
       PYTHONUNBUFFERED: "1"
       LEAGUE_ID: "508419792"
       SEASON: "2025"
+      # Reuse the runner's installed browsers
+      PLAYWRIGHT_BROWSERS_PATH: "$HOME/.cache/ms-playwright"
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -25,15 +27,14 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Install Python deps
-        run: |
-          pip install -r requirements.txt
+      - name: Install project deps
+        run: pip install -r requirements.txt
 
-      - name: Install Playwright browsers
+      - name: Sanity check Playwright exists on runner (no sudo, no install)
         run: |
-          python -m playwright install --with-deps chromium
+          python -m playwright --version || (echo "Playwright missing on runner. SSH and run the setup we did." && exit 1)
 
-      # ---- PLAYWRIGHT LOGIN TO GET COOKIES ----
+      # ---- PLAYWRIGHT LOGIN: get SWID + ESPN_S2 from real browser session ----
       - name: Get ESPN cookies via Playwright
         env:
           ESPN_USER: ${{ secrets.ESPN_USER }}
@@ -41,39 +42,33 @@ jobs:
           GITHUB_ENV: ${{ env.GITHUB_ENV }}
         run: |
           python pipeline/get_espn_cookies.py --league "${{ env.LEAGUE_ID }}" --write-github-env "$GITHUB_ENV"
-          echo "Got cookies. SWID and ESPN_S2 are now in GITHUB_ENV for later steps."
+          echo "Cookies harvested and exported to env."
 
-      # ---- FETCH LEAGUE/TEAMS ----
-      - name: Fetch League (teams, meta)
+      # ---- FETCHERS (now see SWID/ESPN_S2 from previous step) ----
+      - name: Fetch League
         env:
           LEAGUE_ID: ${{ env.LEAGUE_ID }}
           SEASON: ${{ env.SEASON }}
           SWID: ${{ env.SWID }}
           ESPN_S2: ${{ env.ESPN_S2 }}
-        run: |
-          python pipeline/fetch_league.py
+        run: python pipeline/fetch_league.py
 
-      # ---- FETCH ROSTERS (uses cloudscraper fallback + cookies) ----
       - name: Fetch Rosters
         env:
           LEAGUE_ID: ${{ env.LEAGUE_ID }}
           SEASON: ${{ env.SEASON }}
           SWID: ${{ env.SWID }}
           ESPN_S2: ${{ env.ESPN_S2 }}
-        run: |
-          python pipeline/fetch_rosters.py
+        run: python pipeline/fetch_rosters.py
 
-      # ---- FETCH PLAYERS (public endpoint + cookies if needed) ----
       - name: Fetch Players
         env:
           LEAGUE_ID: ${{ env.LEAGUE_ID }}
           SEASON: ${{ env.SEASON }}
           SWID: ${{ env.SWID }}
           ESPN_S2: ${{ env.ESPN_S2 }}
-        run: |
-          python pipeline/fetch_players.py
+        run: python pipeline/fetch_players.py
 
-      # ---- Commit data outputs ----
       - name: Commit and push data
         run: |
           git config --global user.email "actions@github.com"
