--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,17 +2,19 @@ name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "8 * * * *"   # minute 8 every hour
+    - cron: "8 * * * *"
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
-    runs-on: self-hosted  # your VPS runner
+    runs-on: self-hosted
     env:
       PYTHONUNBUFFERED: "1"
       LEAGUE_ID: "508419792"
       SEASON: "2025"
-      # Reuse the runner's installed browsers
       PLAYWRIGHT_BROWSERS_PATH: "$HOME/.cache/ms-playwright"
 
     steps:
@@ -27,25 +29,32 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Install project deps
+      - name: Install deps
         run: pip install -r requirements.txt
 
-      - name: Sanity check Playwright exists on runner (no sudo, no install)
-        run: |
-          python -m playwright --version || (echo "Playwright missing on runner. SSH and run the setup we did." && exit 1)
+      - name: Sanity check Playwright
+        run: python -m playwright --version
 
-      # ---- PLAYWRIGHT LOGIN: get SWID + ESPN_S2 from real browser session ----
+      # Get fresh cookies each run (no manual SWID/ESPN_S2 upkeep)
       - name: Get ESPN cookies via Playwright
         env:
           ESPN_USER: ${{ secrets.ESPN_USER }}
           ESPN_PASS: ${{ secrets.ESPN_PASS }}
           GITHUB_ENV: ${{ env.GITHUB_ENV }}
         run: |
+          if [ -z "${ESPN_USER}" ] || [ -z "${ESPN_PASS}" ]; then
+            echo "ESPN_USER/ESPN_PASS secrets are required for login."
+            exit 1
+          fi
           python pipeline/get_espn_cookies.py --league "${{ env.LEAGUE_ID }}" --write-github-env "$GITHUB_ENV"
-          echo "Cookies harvested and exported to env."
+          echo "SWID/ESPN_S2 set in job env."
 
-      # ---- FETCHERS (now see SWID/ESPN_S2 from previous step) ----
-      - name: Fetch League
+      - name: Assert cookies exist
+        run: |
+          [ -z "${SWID:-}" ] && echo "SWID missing" && exit 1 || echo "SWID OK"
+          [ -z "${ESPN_S2:-}" ] && echo "ESPN_S2 missing" && exit 1 || echo "ESPN_S2 OK"
+
+      - name: Fetch League (teams/standings/settings)
         env:
           LEAGUE_ID: ${{ env.LEAGUE_ID }}
           SEASON: ${{ env.SEASON }}
