--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,7 +2,7 @@ name: Hourly Build and Deploy
 
 on:
   schedule:
-    - cron: "8 * * * *"
+    - cron: "12 * * * *"
   workflow_dispatch:
 
 permissions:
@@ -15,7 +15,8 @@ jobs:
       PYTHONUNBUFFERED: "1"
       LEAGUE_ID: "508419792"
       SEASON: "2025"
-      PLAYWRIGHT_BROWSERS_PATH: "$HOME/.cache/ms-playwright"
+      # ensure user-local bin is in PATH for the runner shell steps
+      PATH: "$HOME/.local/bin:${{ env.PATH }}"
 
     steps:
       - name: Checkout repo
@@ -29,13 +30,17 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Install deps
+      - name: Install Python deps
         run: pip install -r requirements.txt
 
-      - name: Sanity check Playwright
+      # 🔧 Make sure the Chromium binaries are downloaded for THIS job's Python env
+      - name: Install Playwright browsers (Chromium)
+        run: python -m playwright install chromium
+
+      - name: Print Playwright version
         run: python -m playwright --version
 
-      # Get fresh cookies each run (no manual SWID/ESPN_S2 upkeep)
+      # Headless login to get fresh SWID/ESPN_S2 each run
       - name: Get ESPN cookies via Playwright
         env:
           ESPN_USER: ${{ secrets.ESPN_USER }}
@@ -43,11 +48,10 @@ jobs:
           GITHUB_ENV: ${{ env.GITHUB_ENV }}
         run: |
           if [ -z "${ESPN_USER}" ] || [ -z "${ESPN_PASS}" ]; then
-            echo "ESPN_USER/ESPN_PASS secrets are required for login."
-            exit 1
+            echo "ESPN_USER/ESPN_PASS secrets are required"; exit 1
           fi
           python pipeline/get_espn_cookies.py --league "${{ env.LEAGUE_ID }}" --write-github-env "$GITHUB_ENV"
-          echo "SWID/ESPN_S2 set in job env."
+          echo "Cookies exported to job env."
 
       - name: Assert cookies exist
         run: |
